--- a/lib/samplesite/themes/deic-doc/search.twig
+++ b/lib/samplesite/themes/deic-doc/search.twig
@@ -11,7 +11,7 @@
     {% endif %}{% if meta.robots %}
         <meta name="robots" content="{{ meta.robots }}">
     {% endif %}
-    <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/bootstrap.min.css"/>
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -22,14 +22,20 @@
     <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/hljs-github.min.css"/>
     <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/style.css"/>
     <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/default_style.css"/>
+    <link type="text/css" rel="stylesheet" href="{{ theme_url }}/css/ekko-lightbox.css"/>
+    <script type="text/javascript" src="{{ theme_url }}/js/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ theme_url }}/js/tether.min.js"></script>
+    <script type="text/javascript" src="{{ theme_url }}/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ theme_url }}/js/ekko-lightbox.js"></script>
+    <script type="text/javascript" src="{{ theme_url }}/js/toc.js"></script>
   </head>
   
  <body>
 
-    <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span2 navigation">
-        <form id="search_form" action="{{ base_url  }}/search">
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span2 navigation">
+				<form id="search_form" action="{{ base_url  }}/search">
 					<label id="search_label" for="search_input"><a href="{{ base_url  }}">
 					<i class="icon icon-home icon-white"></i>{{ (pages|first).title }}</a></label>
 					<input type="search" id="search_input" name="q" placeholder="Search the docs" />
@@ -61,23 +67,17 @@
 					</ul>
 				</div>
 				{% endif %}
-				
 				{{ toc }}
-
-	</div>
-	<div class="span9 main">
-		{% for page in pages %}
-			<div class="search_result">
-				<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
-				{% if page.description %}<p>{{ page.description }}</p>{% endif %}
 			</div>
-		{% endfor %} 
+			<div class="span9 main">
+				{% for page in pages %}
+					<div class="search_result">
+						<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+						{% if page.description %}<p>{{ page.description }}</p>{% endif %}
+					</div>
+				{% endfor %} 
+			</div>
+		</div>
 	</div>
-	</div>
-	</div>
-
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="{{ theme_url }}/js/bootstrap.js"></script>
-  <script type="text/javascript" src="{{ theme_url }}/js/toc.js"></script>
 </body>
 </html>
