--- a/lib/samplesite/themes/deic-doc/css/default_style.css
+++ b/lib/samplesite/themes/deic-doc/css/default_style.css
@@ -47,6 +47,7 @@ button {
 /* Sharper Thumbnails */
 img {
     -ms-interpolation-mode: bicubic;
+    margin-bottom: 24px;
 }
 
 /* Input Styles
@@ -136,6 +137,12 @@ h2 {
 
 h3 {
     font-size: 1.4em;
+    margin-top: 1.0em;
+    margin-bottom: 0.5em;
+}
+
+h4 {
+    font-size: 1.05em;
     margin-top: 1.0em;
     margin-bottom: 0.5em;
 }
