Bug fixes and functionality overhaul.

--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -162,7 +162,7 @@
                         </li>
 					{% endfor %}
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; {{ site_title }} 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; {{ site_title }} {{ "now"|date("Y") }}</p>
                 </div>
             </div>
         </div>
