--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -167,7 +167,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; {{ site_title }} 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; {{ site_title }} {{ "now"|date("Y") }}</p>
                 </div>
             </div>
         </div>
