--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -97,11 +97,13 @@
         </div>
         
         
-        {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <a class="navbar-left write-post" share="{{  oc_share }}" path="{{  oc_path }}" owner="{{  oc_owner }}" user="{{  oc_user }}" group="{{  oc_group }}">Write</a>
-            <input type="search" id="write_post" name="q" placeholder="Title" />
+        <a class="navbar-left write-post" share="{{  oc_share }}" path="{{  oc_path }}"
+        {% if (meta.access != 'private' or meta.permissions == 'none') and 
+        (oc_user is not defined  or oc_owner is not defined or oc_owner != oc_user) %}
+        	style="display:none;"
         {% endif %}
-        
+            owner="{{  oc_owner }}" user="{{  oc_user }}" group="{{  oc_group }}">Write</a>
+            <input type="search" id="write_post" name="q" placeholder="Title" />
     </header>
 
     <!-- Main Content -->
