--- a/lib/samplesite/themes/deic-blog/profile.twig
+++ b/lib/samplesite/themes/deic-blog/profile.twig
@@ -91,11 +91,12 @@
             </div>
         </div>
 
-        {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
-            dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}"
-            group="{{ oc_group }}">Show file</button>
-        {% endif %}
+        <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
+   			{% if (meta.access != 'private' or meta.permissions == 'none') and 
+    		(oc_user is not defined  or oc_owner is not defined or oc_owner != oc_user) %}
+    		style="display:none;"
+    		{% endif %}            dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}"
+        group="{{ oc_group }}">Show file</button>
         
         {% if num_pages > 1 %}
 	        <div class="home-link">
