--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -65,6 +65,7 @@
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
+            {% set num_pages = paged_pages|length %}
             {% if num_pages>1 %}
             <div class="navbar-header page-scroll">
                 <a class="navbar-brand-post" href="{{ base_url }}">Home</a>
@@ -99,9 +100,12 @@
                 </div>
             </div>
         </div>
-        {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}" dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}" group="{{ oc_group }}">Show file</button>
+        <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}" dir_id="{{ oc_parent_id }}"
+        {% if (meta.access != 'private' or meta.permissions == 'none') and 
+        (oc_user is not defined  or oc_owner is not defined or oc_owner != oc_user) %}
+        	style="display:none;"
         {% endif %}
+        user="{{ oc_user }}" owner="{{ oc_owner }}" group="{{ oc_group }}">Show file</button>
     </header>
     
     <hr class="small">
