--- a/lib/samplesite/themes/deic-blog/css/clean-blog.css
+++ b/lib/samplesite/themes/deic-blog/css/clean-blog.css
@@ -64,6 +64,7 @@ hr.thin {
 }
 hr {
 	border-color: #808080 -moz-use-text-color -moz-use-text-color;
+	padding-top: 8px;
 }
 .displayname {
 	margin-top: 39px;
@@ -614,5 +615,16 @@ comment {
 
 .comment_meta {
 	margin-top: 5px;
+}
+
+.inline-end-image {
+	height: 42px;
+	position: absolute;
+	right: 24px;
+	margin-top: -64px;
+}
+
+section#content div.inner li input[type=checkbox] {
+	margin: 0;
 }
 
