--- a/lib/samplesite/themes/default/contents.twig
+++ b/lib/samplesite/themes/default/contents.twig
@@ -64,9 +64,11 @@
 		<div id="nav" class="inner">
 			<ul>
 				{% for file in contents |sort %}
-					<li class="toc1">
-						<a href="{{ file }}">{{ file }}</a>
-					</li>
+					{% if file!="403.md" and file!="404.md" %}
+						<li class="toc1">
+							<a href="{{ folder }}{{ file }}">{{ file }}</a>
+						</li>
+					{% endif %}
 				{% endfor %}
 			</ul>
 		</div>
